# django-view-decorator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE.txt  README.md  pyproject.toml
.github/workflows/: codeql.yml  test.yml
django_view_decorator/: __about__.py  __init__.py  app_config.py  apps.py  conf.py  decorators.py  urls.py  urls_utils.py
django_view_decorator/management/commands/: list_views.py
docs/: conf.py  index.rst  quickstart.rst
tests/: __init__.py  settings.py  some_views.py  test_decorator.py  urls.py
tests/app_config_test/: apps.py  views.py
tests/test_app/: views.py
