[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-view-decorator"
description = ''
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = []
authors = [
  { name = "Víðir Valberg Guðmundsson", email = "valberg@orn.li" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "Django>=3.2",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/valberg/django-view-decorator#readme"
Issues = "https://github.com/valberg/django-view-decorator/issues"
Source = "https://github.com/valberg/django-view-decorator"

[tool.hatch.version]
path = "django_view_decorator/__about__.py"

[tool.hatch.build.targets.sdist]
include = [
    "LICENSE.txt",
    "README.txt",
    "/django_view_decorator",
]

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]==7.2.1",
  "pytest==7.2.2",
  "pytest-cov",
  "pytest-django==4.5.2",
  "mypy==1.1.1",
  "django-stubs==1.15.0",
]

[[tool.hatch.envs.tests.matrix]]
python = ["3.10", "3.11"]
django = ["3.2", "4.0", "4.1", "4.2rc1"]

[tool.hatch.envs.tests.overrides]
matrix.django.dependencies = [
    { value = "django~={matrix:django}" },
]
matrix.python.dependencies = [
    { value = "typing_extensions==4.5.0", if = ["3.10"]},
]

[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=django_view_decorator --cov=tests --cov=append {args}"
no-cov = "cov --no-cov {args}"
typecheck = "mypy --config-file=pyproject.toml ."
runserver = "DEBUG=True python tests/manage.py runserver {args}"


[tool.hatch.envs.docs]
dependencies = [
    "sphinx==6.1.3",
    "sphinx-autobuild==2021.3.14",
    "furo==2022.12.7",
]

[tool.hatch.envs.docs.scripts]
build = "sphinx-build -b html docs docs/_build/html"
serve = "sphinx-autobuild -b html docs docs/_build/html"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE="tests.settings"
addopts = "--reuse-db"
norecursedirs = "build dist docs .eggs/* *.egg-info htmlcov django_view_decorator .git"
python_files = "test*.py"
testpaths = "tests"
pythonpath = ". tests"

[tool.coverage.run]
branch = true
parallel = true
omit = [
  "django_view_decorator/__about__.py",
  "tests/manage.py",
]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.mypy]
mypy_path = "django_view_decorator/"
exclude = "venv/"
namespace_packages = false
show_error_codes = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
allow_untyped_defs = true
